@@ -19,4 +19,5 @@
 <use   name="HLTrigger/HLTcore"/>
 <use   name="L1Trigger/GlobalTriggerAnalyzer"/>
 <use   name="DataFormats/METReco"/>
+<use   name="PhysicsTools/JetMCUtils"/>
 <flags   EDM_PLUGIN="1"/>
